--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <hr />
             <ul class="social">
                   <li><a href="https://www.linkedin.com/in/brandonseanjones/"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="mailto:orthofid013@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
+                  <li><a href="mailto:jonesbrandonsean@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
                   <li><a href="https://github.com/brandlej3"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
@@ -101,7 +101,7 @@
 						   <span>Brandon Jones</span><br>
 						   <span>Research Triangle Park, NC<br>
                      </span>
-                     <a href="mailto:orthofid013@gmail.com"><span>orthofid013@gmail.com</span></a>
+                     <a href="mailto:jonesbrandonsean@gmail.com"><span>jonesbrandonsean@gmail.com</span></a>
 					   </p>
 
                </div>
@@ -291,7 +291,7 @@
 
             <ul class="social-links">
                   <li><a href="https://www.linkedin.com/in/brandonseanjones/"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="mailto:orthofid013@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
+                  <li><a href="mailto:jonesbrandonsean@gmail.com"><i class="fa fa-envelope-o"></i></a></li>
                   <li><a href="https://github.com/brandlej3"><i class="fa fa-github"></i></a></li>
             </ul>
 
