update to project section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="brandonresume.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="brandonsresume.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -157,7 +157,7 @@
                         <img alt="" src="images/portfolio/aescru.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>aescru</h5>
+          					      <h5>Aescru</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
@@ -171,7 +171,7 @@
                     <div class="item-wrap">
   
                        <a href="#modal-03" title="">
-                          <img alt="" src="images/portfolio/console.jpg">
+                          <img alt="" src="images/portfolio/chatpic.png">
                           <div class="overlay">
                              <div class="portfolio-item-meta">
                                       <h5>Chat Application</h5>
@@ -187,12 +187,12 @@
                     <div class="columns portfolio-item">
                         <div class="item-wrap">
       
-                           <a href="#modal-02" title="">
-                              <img alt="" src="images/portfolio/console.jpg">
+                           <a href="#modal-04" title="">
+                              <img alt="" src="images/portfolio/leetcode.png">
                               <div class="overlay">
                                  <div class="portfolio-item-meta">
-                                          <h5>Console</h5>
-                                    <p>Web Development</p>
+                                          <h5>LeetCode</h5>
+                                    <p>Coding practice</p>
                                        </div>
                               </div>
                               <div class="link-icon"><i class="icon-plus"></i></div>
@@ -228,7 +228,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-aescru.png" alt="" />
 
 		      <div class="description-box">
 			      <h4>aescru</h4>
@@ -244,7 +244,7 @@
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-chatpic.png" alt="" />
 
 		      <div class="description-box">
 			      <h4>Chat Application</h4>
@@ -253,7 +253,7 @@
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="#">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
@@ -261,16 +261,15 @@
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-leetcode.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>LeetCode</h4>
+			      <p>See my coding practice!</p>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
+               <a href="#">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
