resolve PNG display issue

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" width="800px" height="800px" src="images/portfolio/calculator.png">
+                        <img alt="" width="800px" height="800px" src="images/portfolio/calculator.PNG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Macronutrient Calculator</h5>
@@ -154,7 +154,7 @@
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/aescru.png">
+                        <img alt="" src="images/portfolio/aescru.PNG">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Aescru</h5>
@@ -212,7 +212,7 @@
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-calculator.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-calculator.PNG" alt="" />
 
 		      <div class="description-box">
 			      <h4>Macronutrient Calculator</h4>
@@ -228,7 +228,7 @@
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-aescru.png" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-aescru.PNG" alt="" />
 
 		      <div class="description-box">
 			      <h4>aescru</h4>
