update to site content

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <h2>About Me</h2>
 
-            <p>Developer who firmly believes in the principles of Agile methodology, DevOps, and twelve-factor applications.
+            <p>Developer who believes in the principles of Agile methodology, DevOps, and twelve-factor applications.
             I embrace the latest modern web technology and collaboration through all mediums!
             </p>
 
