updated changes to resume and fit&finish

--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 
 		      <div class="description-box">
 			      <h4>LeetCode</h4>
-			      <p>See my coding practice!</p>
+			      <p>See my recent coding practice!</p>
 		      </div>
 
             <div class="link-box">
-               <a href="#">Details</a>
+               <a href="https://leetcode.com/brandlej3/">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
